--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
       </section>
 
       <!-- COMMENTS - Added to template by Nick -->
-      {% if page.comments != false %}
+      {% if page.comments == true %}
       <div id="disqus_thread"></div>
       <script type="text/javascript">
         var disqus_shortname  = '{{ site.disqus_shortname }}';
