--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -43,6 +43,8 @@
           </li>
         {% endfor %}
       </ul>
+
+      last updated {{ site.time }}
   
     <!-- COMMENTS - Added to template by Nick -->
     {% if page.comments %}
