--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -44,9 +44,8 @@
         {% endfor %}
       </ul>
 
-      last updated {{ site.time }}
+      last updated {{ site.time }} (UTC)
   
-    <!-- COMMENTS - Added to template by Nick -->
     {% if page.comments %}
     <div id="disqus_thread"></div>
     <script type="text/javascript">
