--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,6 +48,7 @@
   
     {% if page.comments %}
     <div id="disqus_thread"></div>
+    Comment section
     <script type="text/javascript">
       var disqus_shortname  = '{{ site.disqus_shortname }}';
       var disqus_identifier = '{{ page.url }}';
