--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,7 +48,7 @@
   
     {% if page.comments %}
     <script src="https://utteranc.es/client.js"
-    repo="{{ site.baseurl }}"
+    repo="{{ site.repo }}"
     issue-term="pathname"
     theme="github-light"
     crossorigin="anonymous"
