--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -44,7 +44,7 @@
         {% endfor %}
       </ul>
 
-      last updated {{ site.time }} (UTC)
+      
   
     {% if page.comments %}
     <script src="https://utteranc.es/client.js"
@@ -54,30 +54,16 @@
     crossorigin="anonymous"
     async>
     </script>
-
-    <div id="disqus_thread"></div>
-    Comment section
-  <!-- 
-      <script type="text/javascript">
-      var disqus_shortname  = '{{ site.disqus_shortname }}';
-      var disqus_identifier = '{{ page.url }}';
-
-      (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    -->
     {% endif %}
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
+        last updated {{ page.time }} (UTC)
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        repository_name={{site.github.repository_name }}
         {% endif %}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
