--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,7 +48,7 @@
   
     {% if page.comments %}
     <script src="https://utteranc.es/client.js"
-    repo="{{ site.repo }}"
+    repo="{{ site.github.repository_nwo }}"
     issue-term="pathname"
     theme="github-light"
     crossorigin="anonymous"
@@ -63,8 +63,8 @@
         last updated {{ page.time }} (UTC)
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        repository_name={{site.github.repository_name }}
         {% endif %}
+        repository_name={{site.github.repository_name }}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
