--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -60,11 +60,15 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        last updated {{ page.time }} (UTC)
+        Site last updated {{ site.time }} (UTC)
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         repository_name={{site.github.repository_name }}
+        site.github.is_user_page = {{site.github.is_user_page}}
+        site.github.is_project_page = {{site.github.is_project_page}}
+        Owner_URL{{ site.github.owner_url }}
+
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
