--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -61,7 +61,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         Site last updated {{ site.time }} (UTC)
-        {% if site.github.is_project_page %}
+        {% if site.github.is_user_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         repository_name={{site.github.repository_name }}
